<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItemPopular"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--ImageVIew to display our Course Image-->
        <ImageView
            android:id="@+id/ivMovie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp" />

        <!--Text View to display Course Name-->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivMovie"
            android:text="Titulo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvTitlePopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivMovie"
            android:text="@string/popularity"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/tvTitlePopularity"
            android:text="9.0"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/tvTitleOriginaLanguaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitlePopularity"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivMovie"
            android:text="@string/original_languaje"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOriginalLanguaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitlePopularity"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/tvTitleOriginaLanguaje"
            android:text="En"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvTitleReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleOriginaLanguaje"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivMovie"
            android:text="@string/relese_date"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleOriginaLanguaje"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/tvTitleReleaseDate"
            android:text="2022-03-01"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/tvTitleVoteAverge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleReleaseDate"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivMovie"
            android:text="@string/vote_average"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVoteAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleReleaseDate"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/tvTitleVoteAverge"
            android:text=" 7.5"
            android:textColor="@color/white"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>